--- a/style-generator/index.html
+++ b/style-generator/index.html
@@ -5,6 +5,6 @@
         <title>Mapbox Style to Elm</title>
     </head>
     <body>
-        <script src="index.js"></script>
+        <script type="module" src="./index.js"></script>
     </body>
 </html>
